get tweet_id correctly via twitter.status(@tweet.tweet_id).text

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,11 +1,19 @@
-<p>Go get a tweet.</p>
 
 <%= form_for @tweet do |f| %>
   <%= f.label'Put a tweet id here', :tweet_id %>:
-  <%= f.text_field :tweet_id %><br />
+  <%= f.text_field :tweet_id %>
   <%= f.submit %>
 <% end %>
 
-<% @tweets.each do |tweet| %>
-  <%= tweet.body %>
-<% end %>
+
+<table id="table">
+  <tr>
+    <th>Tweets </th>
+  </tr>
+  <% @tweets.each do |tweet| %>
+    <tr>
+      <td> <%= tweet.body %>  </td><br />
+    </tr>
+
+</table>
+  <% end %>
