--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,17 @@
  *= require_self
  *= require_tree .
  */
+#container{
+ width: 700px ;
+ margin-left: auto ;
+ margin-right: auto ;
+
+ }
+
+.notice{
+  padding:0.8em;
+  margin-bottom:1em;
+  border:2px solid #ddd;
+  color: red;
+}
+
