add body prescence validation

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @tweet do |f| %>
   <%= f.label :tweet_id ,('enter tweet id') %>
   <%= f.text_field :tweet_id %>
+<!--     <%= f.label :body %>
+  <%= f.text_field :body %> -->
   <%= f.submit 'fetch a tweet' %>
 <% end %>
 
