add some boot style

--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -3,3 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+
+body { font-size: 12pt }
+
+.contentWrapper{
+	margin-top: 20px;
+	padding: 20px 25px 20px 25px;
+	height: 510px;
+	border: 0px solid #d4e6ee;
+	background-color: #fff;
+}
