--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Favstar</title>
+  <title>Catch -A- Tweet</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   </head>
   <body>
-    <div id="container">
-    <%# = debug(params)%>
+    <div id="container" >
+      <div class="contentWrapper">
+        <div class="well well-large">
+          <%# = debug(params)%>
 
     <% if flash[:notice] -%>
-        <p id='notice'><%=h flash[:notice] %></p>
+
+        <p id='notice'> <%=h flash[:notice] %> </p>
+    
     <% end %>
+
       <%= yield %>
+
+        </div>
+      </div>
     </div>
+
   </body>
 </html>
