--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -13,3 +13,14 @@ body { font-size: 12pt }
 	border: 0px solid #d4e6ee;
 	background-color: #fff;
 }
+
+
+.table_head{
+	padding: 20px 25px 20px 25px;
+	margin-top: 20px;
+}
+
+.table table-bordered{
+	width: 400px;
+	padding: 20px 25px 20px 25px;
+}
