add placeholder text enter tweet_id

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
 
-    <%= f.text_field :tweet_id %>
+  <%= f.text_field :tweet_id, :placeholder=>"enter a tweet_id" %>
     <%= f.submit 'fetch a tweet', class: "btn btn-primary" %>
   <% end %>
 
