add link to repo

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -39,5 +39,6 @@
         <td><%= link_to 'de-tweet', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr> 
     <% end %>
-</table>
+  </table>
+  <%=link_to "Link to a repo of this little test", "https://github.com/kstrand/favstar_homerun"%>
 </div>
