add text to new page delete @import_bootstrap

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -30,8 +30,16 @@ a {
 }
 
 div {
+
+  margin-left: 10%;
+  margin-top: 130px;
+  background-color: white;
+  width: 80%;
+  
   &.field, &.actions {
     margin-bottom: 10px;
+
+    
   }
 }
 
