--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,33 +1,20 @@
 
-
+/*@import "bootstrap";*/
 /*
  *= require_self
  *= require_tree .
+
  */
 
-@import "bootstrap";
-
-
-#container{
- width: 700px ;
- margin-left: auto ;
- margin-right: auto ;
- margin-top: 100;
-
- }
 
 
 
-.notice{
-  padding:0.8em;
-  margin-bottom:1em;
-  border:2px solid #ddd;
-  color: red;
-}
 
-.table-bordered{
-padding: 20px 25px 20px 25px;
-	
+body { font-size: 12pt }
+
+.app_info {
+	background-color: red;
 
 }
+
 
