--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -3,5 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+/* 
+took me really like two days to figure out that the bootstrap scaffolding can only be over ridden 
+in the corresponding css for the file in question and I'm not even sure that is true.
+
+
+*/
+
 
 
