--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,24 +1,15 @@
 
-  <div>
-    <% if flash[:notice] -%>
-        <p id='notice'> <%=h flash[:notice] %> </p>
+    <div class="table_div">
+
+
+  <%= form_for @tweet, :html => {:class => "form-inline" } do |f|  %>
+
+   <% if flash[:notice] -%>
+        <p class="alert alert-error"> <%=h flash[:notice] %> </p>
       <% end %>
 
-  <%= form_for @tweet,:html => { :class => "form-inline" } do |f|  %>
 
- <% if @tweet.errors.any? %>
-  <div id="errorExplanation">
-    <h2><%= pluralize(@tweet.errors.count, "error") %> prohibited this user from being saved:</h2>
-    <ul>
-    <% @tweet.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
-
-
-  <%= f.text_field :tweet_id, :placeholder=>"enter a tweet_id" %>
+  <%= f.text_field :tweet_id, placeholder: "enter a tweet_id" %>
     <%= f.submit 'fetch a tweet', class: "btn btn-primary" %>
   <% end %>
 
@@ -38,9 +29,15 @@
     
         <td><%= link_to 'de-tweet', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr> 
+
+
     <% end %>
+     <tr>
+        <td><%=link_to "Link to a repo of this little test", "https://github.com/kstrand/favstar_homerun"%></td>
+      </tr>
   </table>
 
-  <%=link_to "Link to a repo of this little test", "https://github.com/kstrand/favstar_homerun"%>
 
+ 
+<!--   </div> -->
 </div>
