--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,3 +1,20 @@
-<div class="app_info"><p> <span> This app is using the twitter gem to fetch a tweet . </span></p> </div>
+<div class="title_div">
+  <h2>
+  	<span>CATCH -A- TWEET
+    </span>
+  </h2>
+</div>
+
+<div class="app_info">
+  <p>
+  	<span>This app is using the twitter gem maintained by 
+      Erik Michaels-Ober on GitHub. To fetch a tweet enter a valid twee id. You can copy and paste the tweet id after clicking on the "details" link of a tweet.
+    </span>
+  </p>
+</div>
+
+
+
+	 
 
 <%= render 'form' %>
