--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Catch -A- Tweet</title>
+<link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700|Montserrat+Subrayada:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+
+
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
