--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -12,3 +12,53 @@ in the corresponding css for the file in question and I'm not even sure that is 
 
 
 
+
+.app_info{
+/*float: left;*/
+padding: 20px 40px 10px 30px;
+text-align: left;
+margin: 50px 50px 50px 50px;
+border:1.5px solid rgba(128,123,128,.5);
+width: 30%;
+height: 100%;
+border-style:inset;
+
+}
+
+.title_div{
+/*float: left;*/
+
+padding: 20px 40px 10px 30px;
+text-align: left;
+margin: 50px 50px 50px 50px;
+border:px solid rgba(128,123,128,.5);
+width: 30%;
+height: 100%;
+background-color: white;
+
+}
+
+.table_div{
+padding: 30px 20px 10px 20px;
+text-align: left;
+margin: 50px 50px 50px 50px;
+border:1.5px solid rgba(128,123,128,.5);
+width: 90%;
+height: 100%;
+border-style:inset;
+
+
+}
+
+
+.alert alert-error{
+padding: 20px 40px 10px 30px;
+text-align: left;
+margin: 0px 0px 0px 0px;
+border:1px solid rgba(128,123,128,.5);
+width: 30px;
+
+	
+
+}
+
