add link to repo

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -22,9 +22,9 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #9fb03e;
   &:visited {
-    color: #666;
+    color: #9fb03e;
   }
   &:hover {
     color: #fff;
