--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -3,6 +3,7 @@
   	<span>CATCH -A- TWEET
     </span>
   </h2>
+
 </div>
 
 <div class="app_info">
@@ -10,6 +11,9 @@
   	<span>This app is using the twitter gem maintained by 
       Erik Michaels-Ober on GitHub. To fetch a tweet enter a valid twee id. You can copy and paste the tweet id after clicking on the "details" link of a tweet.
     </span>
+    
+     <td><%=link_to "Link to the repo", "https://github.com/kstrand/favstar_homerun"%></td>
+
   </p>
 </div>
 
