try custom validation

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -12,8 +12,9 @@ p, ol, ul, td {
 
 }
 
-h2 {
-  font-family: 'Montserrat'
+h1 {
+  font-family: 'Montserrat';
+  color:blue;
 }
 pre {
   background-color: #eee;
