--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
 
-    <div class="table_div">
+    <div class="table_div shadow">
 
 
   <%= form_for @tweet, :html => {:class => "form-inline" } do |f|  %>
