--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -6,7 +6,7 @@
 
 </div>
 
-<div class="app_info">
+<div class="app_info shadow">
   <p>
   	<span>This app is using the twitter gem maintained by 
       Erik Michaels-Ober on GitHub. To fetch a tweet enter a valid twee id. You can copy and paste the tweet id after clicking on the "details" link of a tweet.
